# intelligent-classroom

./: Classroom Analytics.json  Dockerfile  README.md  build_ri_images.sh  docker-compose.yml  install_docker.sh  launch.sh
classroom_analytics/: CMakeLists.txt  faces_gallery.json  main.cpp  models.LST  timetable.txt
classroom_analytics/include/: classroom_analytics.hpp  image_grabber.hpp
classroom_analytics/src/: image_grabber.cpp
